# draft-kings-db

./: .gitignore  README.md  environment.yml  help.txt  merge_with_github.sh  pyproject.toml  requirements.txt  scrape.toml  scrape_contests.py  scrape_payouts.py  scraper.py  workflow.sh  workflow_scheduled.sh
competitions/: 02-13-2023.csv  02-14-2023.csv  02-15-2023.csv  02-23-2023.csv  02-24-2023.csv  02-25-2023.csv  02-26-2023.csv  02-27-2023.csv  02-28-2023.csv  03-01-2023.csv  03-02-2023.csv  03-03-2023.csv  03-04-2023.csv  03-05-2023.csv  03-06-2023.csv  03-07-2023.csv  03-08-2023.csv  03-09-2023.csv  03-10-2023.csv  03-11-2023.csv  03-12-2023.csv  03-13-2023.csv  03-14-2023.csv  03-15-2023.csv  03-16-2023.csv  03-17-2023.csv  03-18-2023.csv  03-23-2023.csv  03-24-2023.csv  03-26-2023.csv  03-29-2023.csv  03-30-2023.csv  04-06-2023.csv  04-08-2023.csv  04-15-2023.csv  04-16-2023.csv  04-18-2023.csv  04-19-2023.csv  04-20-2023.csv  04-22-2023.csv  (+75 more)
contest-types/: 02-24-2023.csv  02-25-2023.csv  02-26-2023.csv  03-09-2023.csv  03-11-2023.csv  03-31-2023.csv  04-16-2023.csv  05-16-2023.csv  05-21-2023.csv  06-01-2023.csv  06-20-2023.csv  06-26-2023.csv  07-17-2023.csv  08-30-2023.csv  09-04-2023.csv  10-05-2023.csv  10-16-2023.csv
contests/: 02-12-2023.csv  02-13-2023.csv  02-14-2023.csv  02-15-2023.csv  02-16-2023.csv  02-23-2023.csv  02-24-2023.csv  02-25-2023.csv  02-26-2023.csv  02-27-2023.csv  02-28-2023.csv  03-01-2023.csv  03-02-2023.csv  03-03-2023.csv  03-04-2023.csv  03-05-2023.csv  03-06-2023.csv  03-07-2023.csv  03-08-2023.csv  03-09-2023.csv  (+141 more)
(+8788 files in other folders)
